selene-lib/tests/full_run/function_overriding/function_overriding.stderr
error[undefined_variable]: `global` is not defined
  ┌─ function_overriding.lua:2:10
  │
2 │ function global.name() end
  │          ^^^^^^

