selene-lib/tests/full_run/function_overriding/function_overriding.lua
-- This breaks like, 3 separate lints
function global.name() end

function defined.name() end
